--- a/formularz.html
+++ b/formularz.html
@@ -1,7 +1,16 @@
-<form action="checkbox_post.php" method="post">
-    <input type="checkbox"> id="vehicle1" name="vehicle1" value="Bike">
-    <label for="vehicle1"> I have a bike</label><br>
-    <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-    <label for="vehicle2"> I have a car</label><br>
-    <input type="submit" value="Submit">
-</form> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <form action="form_post.php" method="post">
+        Name: <input type="text" name="name"><br>
+        Nazwisko: <input type="text" name="nazwisko"><br>
+        E-Mail: <input type="text" name="email"><br>
+        <input type="submit">
+    </form>
+</body>
+</html>
